--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,26 @@
-# HTML
-- task: KubernetesManifest@1
-  inputs:
-    action: 'deploy'
-    connectionType: 'kubernetesServiceConnection'
-    kubernetesServiceConnection: 'KubeAPI'
-    manifests: 'portainer.yaml'
+# Define jobs and steps for the pipeline
+jobs:
+- job: DeployPortainer
+  displayName: 'Deploy Portainer to Kubernetes'
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - task: KubernetesManifest@1
+    inputs:
+      action: 'deploy'
+      connectionType: 'kubernetesServiceConnection'
+      kubernetesServiceConnection: 'KubeAPI'
+      manifests: 'portainer.yaml'
+
 # Archive your static HTML project and save it with the build record.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+# Define triggers for the pipeline
 trigger:
 - main
 
-pool:
-  vmImage: ubuntu-latest
-
+# Define additional steps for the pipeline
 steps:
 - task: ArchiveFiles@2
   inputs:
