--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
       action: 'deploy'
       connectionType: 'kubernetesServiceConnection'
       kubernetesServiceConnection: 'KubeAPI'
-      manifests: 'portainer.yaml'
+      manifests: '/etc/kubernetes/manifests/portainer.yaml'
 
   # Archive your static HTML project and save it with the build record.
   # Add steps that build, run tests, deploy, and more:
