--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,32 +1,22 @@
-# Define jobs and steps for the pipeline
 jobs:
 - job: DeployPortainer
   displayName: 'Deploy Portainer to Kubernetes'
   pool:
     vmImage: 'ubuntu-latest'
   steps:
-  - task: CopyFiles@2
-    inputs:
-      SourceFolder: '/etc/kubernetes/manifests/'
-      Contents: 'portainer.yaml'
-      TargetFolder: '$(Build.SourcesDirectory)'
-
   - task: KubernetesManifest@1
     inputs:
       action: 'deploy'
       connectionType: 'kubernetesServiceConnection'
       kubernetesServiceConnection: 'KubeAPI'
-      manifests: '$(Build.SourcesDirectory)/portainer.yaml'
+      manifests: '$(Build.SourcesDirectory)/manifests/portainer.yaml'
 
-  # Archive your static HTML project and save it with the build record.
-  # Add steps that build, run tests, deploy, and more:
-  # https://aka.ms/yaml
   - task: ArchiveFiles@2
     inputs:
       rootFolderOrFile: '$(build.sourcesDirectory)'
       includeRootFolder: false
+
   - task: PublishBuildArtifacts@1
 
-# Define triggers for the pipeline
 trigger:
 - main
