Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ jobs:
       manifests: '$(Build.SourcesDirectory)/manifests/portainer.yaml'
       configurekubectl: true
       secretType: 'dockerRegistry'
+      options: '--validate=false'  # Add this line to disable validation
 
   - task: ArchiveFiles@2
     inputs:
