--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,4 @@
-jobs:
-- job: DeployPortainer
-  displayName: 'Deploy Portainer to Kubernetes'
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-  - task: KubernetesManifest@1
-    inputs:
-      action: 'deploy'
-      connectionType: 'kubernetesServiceConnection'
-      kubernetesServiceConnection: 'KubeAPI'
-      manifests: '$(Build.SourcesDirectory)/manifests/portainer.yaml'
-      configurekubectl: true
-      secretType: 'dockerRegistry'
-      options: '--validate=false'  # Add this line to disable validation
-
-  - task: ArchiveFiles@2
-    inputs:
-      rootFolderOrFile: '$(build.sourcesDirectory)'
-      includeRootFolder: false
-
-  - task: PublishBuildArtifacts@1
-
-trigger:
-- main
+- task: GitHubComment@0
+  inputs:
+    gitHubConnection: 'Jebara7'
+    repositoryName: '$(Build.Repository.Name)'
