--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-python-deployment
+  name: faroapplication-deployment
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: my-python-app
+      app: faroapplication
   template:
     metadata:
       labels:
-        app: my-python-app
+        app: faroapplication
     spec:
       containers:
-      - name: mypythondockerrepo
-        image: myacrrepo421.azurecr.io/akannan1087/mypythondockerrepo:#{Build.BuildId}#
+      - name: faroapplication
+        image: farotestregistry.azurecr.io/farosolutions/faroapplication:#{Build.BuildId}#
         ports:
         - containerPort: 5000
 # service type loadbalancer       
@@ -22,10 +22,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-python-app-svc
+  name: faroapplication
 spec:
   selector:
-    app: my-python-app
+    app: faroapplication
   ports:
     - protocol: TCP
       port: 5000
