--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: faroapplication
+  name: faroapplication-svc
 spec:
   selector:
     app: faroapplication
