--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: faroapplication
-        image: farotestregistry.azurecr.io/farosolutions/faroapplication:#{Build.BuildId}#
+        image: farotestregistry.azurecr.io/jebara7/helloworld:#{Build.BuildId}#
         ports:
         - containerPort: 5000
 # service type loadbalancer       
