--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,10 +14,9 @@ spec:
     spec:
       containers:
       - name: helloworld
-        image: farotestregistry.azurecr.io
+        image: farotestregistry.azurecr.io/jebara7/helloworld:latest
         ports:
         - containerPort: 5000
-# service type loadbalancer       
 ---
 apiVersion: v1
 kind: Service
