--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helloworld
+  name: helloworld-deployment
 spec:
   replicas: 3
   selector:
@@ -17,6 +17,7 @@ spec:
         image: farotestregistry.azurecr.io/jebara7/helloworld:latest
         ports:
         - containerPort: 5000
+# service type loadbalancer       
 ---
 apiVersion: v1
 kind: Service
