--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
+  name: helloworld
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: farosolutions-app
+      app: helloworld
   template:
     metadata:
       labels:
-        app: farosolutions-app
+        app: helloworld
     spec:
       containers:
       - name: helloworld
-        image: farotestregistry.azurecr.io/jebara7/helloworld:#{Build.BuildId}#
+        image: farotestregistry.azurecr.io/:#{Build.BuildId}#
         ports:
         - containerPort: 5000
 # service type loadbalancer       
