--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: helloworld
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: helloworld
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: helloworld
         image: farotestregistry.azurecr.io/:#{Build.BuildId}#
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
 # service type loadbalancer       
